// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTopic failure failed topic creation: should display error message 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <div>
      Error: $
      {"graphQLErrors":[],"networkError":{},"message":"createTopic: network-error"}
    </div>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            value="42"
          >
            test-name
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic snapshots fresh load 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`AddTopic snapshots invalid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            value="42"
          >
            test-name
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value=""
        />
      </div>
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic snapshots valid parameters 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            value="42"
          >
            test-name
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;

exports[`AddTopic success should create a topic 1`] = `
<div>
  <div
    class="sc-bdvvaa hMSAon"
  >
    <h1>
      Add Topic
    </h1>
    <div>
      Error: $
      {"graphQLErrors":[],"networkError":{},"message":"Mocked response should contain either result or error: {\\"query\\":\\"mutation CreateTopicMutation($groupId: ID!, $title: String!, $description: String) {\\\\n  createTopic(groupId: $groupId, title: $title, description: $description) {\\\\n    id\\\\n  }\\\\n}\\\\n\\"}"}
    </div>
    <form
      class="sc-gsDJrp idIFaR"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="groupLabel"
        >
          Group
        </label>
        <select
          aria-labelledby="groupLabel"
          class="form-control form-control-lg"
          id="group"
        >
          <option
            value="42"
          >
            test-name
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="topicLabel"
        >
          Topic
        </label>
        <input
          aria-labelledby="topicLabel"
          class="form-control form-control-lg"
          id="topic"
          value="A Really Great Topic"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          id="descriptionLabel"
        >
          Description
        </label>
        <input
          aria-labelledby="descriptionLabel"
          class="form-control form-control-lg"
          id="description"
          value="A really great topic description for a really great topic."
        />
      </div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit Topic
      </button>
    </form>
    <div
      class="sc-dkPtyc cWQCqc"
    />
  </div>
</div>
`;
